# RejuvBridge

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
RejuvBridge/: README.md
RejuvBridge/src/rejuvbridge/crossmodal/: encoders.py
RejuvBridge/src/rejuvbridge/data/: pipeline.py
RejuvBridge/src/rejuvbridge/imaging/models/: cnn3d.py  unet2d.py
RejuvBridge/src/rejuvbridge/training/: runner.py
RejuvBridge/src/rejuvbridge/utils/: demo.py
RejuvBridge/tests/: test_demo.py  test_imports.py
conf/: train_demo.yaml
docs/: PR-refactor-lazy-imports-optional-extras-logging-ci.md
rejuvbridge/: LICENSE  Makefile  README.md  environment.yml  pyproject.toml  setup.cfg
rejuvbridge/checkpoints/: train_metrics.json
rejuvbridge/configs/: config.yaml
rejuvbridge/configs/data/: synthetic.yaml
rejuvbridge/configs/paths/: default.yaml
rejuvbridge/configs/train/: cpu_fast.yaml
rejuvbridge/reports/: README.md  retrieval.json
rejuvbridge/src/rejuvbridge/: __init__.py  eval.py  infer.py  metrics.py  train.py  vis.py
rejuvbridge/src/rejuvbridge/data/: synth_omics.py  synth_tiles.py
rejuvbridge/src/rejuvbridge/models/: contrastive.py  image_encoder.py  omics_mlp.py
rejuvbridge/tests/: test_determinism.py  test_retrieval.py  test_shapes.py
src/rejuvbridge/: cli.py
src/rejuvbridge/crossmodal/: __init__.py  encoders.py
src/rejuvbridge/deploy/: __init__.py  app.py
src/rejuvbridge/imaging/: __init__.py
src/rejuvbridge/imaging/models/: __init__.py  unet2d.py
src/rejuvbridge/interpretability/: __init__.py  gradcam.py
src/rejuvbridge/mlops/: registry.py
src/rejuvbridge/training/: runner.py
src/rejuvbridge/ui/: __init__.py  app.py
src/rejuvbridge/utils/: demo.py  env.py  log.py
tests/: test_api_health.py  test_cli_help.py  test_demo.py  test_imports.py  test_schema.py
