[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rejuvbridge"
version = "0.1.0"
description = "Multimodal Imaging↔Omics ML, scalable and production-ready"
readme = "README.md"
authors = [{name = "RejuvBridge Maintainers"}]
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "pandas",
  "pyarrow",
  "omegaconf",
  "hydra-core",
  "torch; platform_machine != 'arm64' or sys_platform != 'darwin'",
  "fastapi",
  "uvicorn",
  "mlflow",
  "scikit-learn",
  "pydantic>=1.10,<3",
  "tqdm",
]

[project.optional-dependencies]
imaging = ["torchvision", "einops"]
training = ["deepspeed", "ray[default]", "tensorboard"]
ui = ["gradio"]
dev = ["pytest", "pytest-cov", "ruff", "mypy"]

[project.scripts]
rejuvbridge = "rejuvbridge.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
select = ["E","F","I"]

